--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,6 @@ requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"
 
 [project]
-name = "D"
-authors = [{name = "D", email = "D@qq.com"}]
+name = "CHESS"
+authors = [{name = "d", email = "D@qq.com"}]
 dynamic = ["version", "description"]
