--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,8 +9,8 @@ python:
   install:
     - requirements: requirements.txt
     # Install our python package before building the docs
-    - method: pip
-      path: .
+    # - method: pip
+    #   path: .
 sphinx:
   configuration: docs/source/conf.py
   fail_on_warning: true
