--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,19 +1,17 @@
-version: "2"
+version: 2
 
 build:
-  os: "ubuntu-22.04"
+  os: ubuntu-22.04
   tools:
     python: "3.12"
 
+sphinx:
+  configuration: docs/source/conf.py   # 指向你的 conf.py 位置
+
 python:
   install:
-    - requirements: requirements.txt
-    # Install our python package before building the docs
-    - method: pip
-      path: .
-sphinx:
-  configuration: docs/source/conf.py
-  fail_on_warning: true
+    - requirements: requirements.txt    # ✅ 仅安装依赖，不安装当前目录
+
 formats:
   - htmlzip
   - pdf
