--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,6 +8,12 @@ build:
 sphinx:
   configuration: docs/source/conf.py   # 指向你的 conf.py 位置
 
+apt_packages:
+  - r-base      # 安装 R 基础环境
+  - libcurl4-openssl-dev  # R 常用依赖
+  - libssl-dev
+  - libxml2-dev
+
 python:
   install:
     - requirements: requirements.txt    # ✅ 仅安装依赖，不安装当前目录
