--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,20 +4,22 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.12"
-
-sphinx:
-  configuration: docs/source/conf.py   # 指向你的 conf.py 位置
   commands:
+    # 安装 R 包 rmarkdown
     - Rscript -e 'install.packages("rmarkdown", repos="https://cloud.r-project.org")'
+
 apt_packages:
-  - r-base      # 安装 R 基础环境
-  - libcurl4-openssl-dev  # R 常用依赖
+  - r-base
+  - libcurl4-openssl-dev
   - libssl-dev
   - libxml2-dev
 
+sphinx:
+  configuration: docs/source/conf.py
+
 python:
   install:
-    - requirements: requirements.txt    # ✅ 仅安装依赖，不安装当前目录
+    - requirements: requirements.txt
 
 formats:
   - htmlzip
