--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,14 +5,12 @@ build:
   tools:
     python: "3.12"
   commands:
+    # 更新 apt 并安装 R 及依赖
+    - sudo apt-get update
+    - sudo apt-get install -y r-base libcurl4-openssl-dev libssl-dev libxml2-dev
     # 安装 R 包 rmarkdown
     - Rscript -e 'install.packages("rmarkdown", repos="https://cloud.r-project.org")'
 
-apt_packages:
-  - r-base
-  - libcurl4-openssl-dev
-  - libssl-dev
-  - libxml2-dev
 
 sphinx:
   configuration: docs/source/conf.py
