--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,7 +4,9 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.12"
-
+  commands:
+    # 在 Sphinx 构建前，先把 CHESS.Rmd 转为 Markdown
+    - python docs/rmd_to_md_rtd.py
 
 
 sphinx:
