--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,22 +1,16 @@
 version: 2
 
-conda:
-  environment: docs/environment.yml
+sphinx:
+  configuration: docs/source/conf.py
+
+python:
+  version: 3.11
+  install:
+    - requirements: requirements.txt
 
 build:
   os: ubuntu-22.04
   tools:
     python: "3.11"
   commands:
-    - python docs/rmd_to_md_rtd.py   # 这时 Conda 环境已激活，Rscript 可用
-
-python:
-  install:
-    - requirements: requirements.txt
-
-sphinx:
-  configuration: docs/source/conf.py
-
-formats:
-  - htmlzip
-  - pdf
+    - echo "RTD build: only building Markdown, no Rscript needed"
