--- a/.github/workflows/render_rmd.yml
+++ b/.github/workflows/render_rmd.yml
@@ -1,34 +1,39 @@
 name: Render Rmd to Markdown
 
+# 触发条件：push、pull request 或手动触发
 on:
   push:
     branches:
       - main
   pull_request:
+  workflow_dispatch:
 
 jobs:
   render-rmd:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout
-      - uses: actions/checkout@v3
+      # 1️⃣ Checkout 仓库
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      # 2. 安装 R
-      - uses: r-lib/actions/setup-r@v2
+      # 2️⃣ 安装 R
+      - name: Setup R
+        uses: r-lib/actions/setup-r@v2
         with:
           r-version: '4.3.1'
+          install-packages: rmarkdown,knitr
 
-      # 3. 安装 R 包
-      - run: |
-          install.packages(c('rmarkdown','knitr'), repos='https://cloud.r-project.org')
+      # 3️⃣ 渲染 Rmd -> Markdown
+      - name: Render Rmd to Markdown
+        run: |
+          Rscript -e "rmarkdown::render('rmd/CHESS.Rmd', 
+                                         output_format='md_document', 
+                                         output_file='docs/source/CHESS.md')"
 
-      # 4. 渲染 Rmd -> Markdown
-      - run: |
-          Rscript -e "rmarkdown::render('rmd/CHESS.Rmd', output_format='md_document', output_file='docs/source/CHESS.md')"
-
-      # 5. 提交生成的 Markdown
-      - run: |
+      # 4️⃣ 提交生成的 Markdown 回仓库
+      - name: Commit generated Markdown
+        run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add docs/source/CHESS.md
