--- a/.github/workflows/render_rmd.yml
+++ b/.github/workflows/render_rmd.yml
@@ -1,11 +1,10 @@
-name: Render Rmd to Markdown
+name: Render Rmd for ReadTheDocs
 
-# 触发条件：push、pull request 或手动触发
+# 可以手动触发，也可以在 Rmd 文件改动时触发
 on:
   push:
-    branches:
-      - main
-  pull_request:
+    paths:
+      - 'rmd/**.Rmd'
   workflow_dispatch:
 
 jobs:
@@ -13,29 +12,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout 仓库
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      # 拉取仓库
+      - uses: actions/checkout@v3
 
-      # 2️⃣ 安装 R
-      - name: Setup R
-        uses: r-lib/actions/setup-r@v2
+      # 安装 R
+      - uses: r-lib/actions/setup-r@v2
         with:
           r-version: '4.3.1'
-          install-packages: rmarkdown,knitr
 
-      # 3️⃣ 渲染 Rmd -> Markdown
-      - name: Render Rmd to Markdown
+      # 安装 R 包依赖
+      - name: Install R packages
         run: |
-          Rscript -e "rmarkdown::render('rmd/CHESS.Rmd', 
-                                         output_format='md_document', 
-                                         output_file='docs/source/CHESS.md')"
+          Rscript -e 'install.packages(c("rmarkdown","knitr","mvtnorm","MASS","Rcpp","RcppArmadillo","remotes"), repos="https://cloud.r-project.org")'
 
-      # 4️⃣ 提交生成的 Markdown 回仓库
-      - name: Commit generated Markdown
+      # 渲染 Rmd -> Markdown
+      - name: Render CHESS.Rmd
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add docs/source/CHESS.md
-          git diff --cached --quiet || git commit -m "Auto-render CHESS.Rmd to Markdown [skip ci]"
-          git push
+          Rscript -e "rmarkdown::render('rmd/CHESS.Rmd', output_file='docs/source/CHESS.md', output_format='md_document')"
+
+      # 可选：列出生成文件
+      - name: List output
+        run: ls -l docs/source/
