--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,14 +1,16 @@
 version: 2
 
+# 构建环境
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.11"
+    python: "3.11"  # 指定 Python 版本
 
-sphinx:
-  configuration: docs/source/conf.py
-
+# 如果不用 conda，也可以用 pip 安装
 python:
-  version: 3.11
   install:
     - requirements: requirements.txt
+
+# Sphinx 配置
+sphinx:
+  configuration: docs/source/conf.py
